<resources>
    <string name="app_name">CookEat</string>
    <string name="title_activity_main">CookEat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cuisines</string>
    <string name="menu_favorites">Favorite Recipes</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_recipes">My Recipes</string>
    <string name="menu_share">Share</string>
    <string name="menu_auth_up_in">Sign Up / Sign In</string>
    <string name="menu_auth_out">Sign Out</string>
    <string name="menu_auth_title">Authentication</string>

    <string name="userNotAuth">Not Authenticated!</string>
    <string name="userPleaseSignIn">Please Sign In...</string>

    <!-- Facebook Auth-->
    <string name="facebook_app_id">2680567598697645</string>
    <string name="facebook_application_id">2680567598697645</string>
    <string name="fb_login_protocol_scheme">fb2680567598697645</string>
    <string name="facebook_login_protocol_scheme">fb2680567598697645</string>
    <string name="select_image">Select Image</string>
    <string name="capture">Capture</string>
    <string name="menu_recipe_submit">Add A Recipe</string>
    <string name="no_more_results">No more results...</string>

</resources>
